# segreg

./: LICENSE  README.rst  setup.cfg  setup.py  setup_with_cython.py
doc/: mybuild.sh
doc/source/: api.rst  code_generalities.rst  conf.py  index.rst
docs/: .buildinfo  api.html  code_generalities.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  tutorial.html
docs/_autosummary/: segreg.analysis.plot_model.html  segreg.analysis.plot_models.html  segreg.analysis.plot_one_bkpt_segreg_rss.html  segreg.analysis.plot_two_bkpt_segreg_rss.html  segreg.bootstrap.bca.html  segreg.bootstrap.bca_acceleration.html  segreg.bootstrap.boot_basic_conf_interval.html  segreg.bootstrap.boot_conf_intervals.html  segreg.bootstrap.boot_param_dist.html  segreg.bootstrap.boot_percentile_conf_interval.html  segreg.bootstrap.boot_resample.html  segreg.bootstrap.model_bca.html  segreg.bootstrap.random_selection_with_replacement.html  segreg.bootstrap.random_selection_with_replacement_two_series.html  segreg.data.hinkley.html  segreg.data.test1.html  segreg.data.test2.html  segreg.model.OLSRegressionEstimator.estimated_params_indices.html  segreg.model.OLSRegressionEstimator.fit.html  segreg.model.OLSRegressionEstimator.get_func_for_params.html  segreg.model.OLSRegressionEstimator.has_restricted_params.html  (+43 more)
html/: api.html  genindex.html  objects.inv  searchindex.js
long_running_tests/: test_one_bkpt_versions.py  test_one_bkpt_versus_brute_force.py  test_two_bkpt_versions.py  test_two_bkpt_versus_brute_force.py
segreg/: .gitignore  mockjit.py
(+176 files in other folders)
