[metadata]
name = segreg
version = 0.0.3
author = Steven Lillywhite
author_email = stevelill005@gmail.com
description = Segmented regression models
license = BSD 3-Clause License
license_file = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/stevelill/segreg
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    numpy
    statsmodels
    scipy
    matplotlib
python_requires = >=3.8

[options.packages.find]
exclude = long_running_tests
